--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "fluent"
   ],
   "devDependencies": {
-    "concat-stream": "~1.4.7",
+    "concat-stream": "~1.4.1",
     "should": "~4.6.1",
     "gulp": "~3.8.10",
     "gulp-jshint": "~1.9.0",
@@ -56,6 +56,6 @@
   "dependencies": {
     "through": "~2.3.6",
     "sax": "~0.6.1",
-    "trumpet": "~1.7.0"
+    "trumpet": "1.6.3"
   }
 }
