--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammerdown",
-  "version": "0.0.19",
+  "version": "1.0.0",
   "main": "index.js",
   "description": "Streaming HTML To Markdown Writer",
   "homepage": "https://github.com/tjchaplin/hammerdown",
@@ -46,11 +46,12 @@
   ],
   "devDependencies": {
     "concat-stream": "~1.4.1",
-    "should": "~4.6.1",
     "gulp": "~3.8.10",
+    "gulp-bump": "^0.1.11",
     "gulp-jshint": "~1.9.0",
-    "gulp-util": "~3.0.2",
     "gulp-mocha": "~2.0.0",
+    "gulp-util": "~3.0.2",
+    "should": "~4.6.1",
     "sinon": "~1.12.2"
   },
   "dependencies": {
