--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hammerdown",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "index.js",
   "description": "Streaming HTML To Markdown Writer",
   "homepage": "https://github.com/tjchaplin/hammerdown",
@@ -45,14 +45,19 @@
     "fluent"
   ],
   "devDependencies": {
+    "browserify": "^8.1.1",
     "concat-stream": "1.4.7",
+    "del": "^1.1.1",
     "gulp": "~3.8.10",
     "gulp-bump": "^0.1.11",
     "gulp-jshint": "~1.9.0",
     "gulp-mocha": "~2.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.1.0",
     "gulp-util": "~3.0.2",
     "should": "~4.6.1",
-    "sinon": "~1.12.2"
+    "sinon": "~1.12.2",
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "through": "~2.3.6",
