--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
   ],
   "devDependencies": {
     "browserify": "^8.1.1",
-    "concat-stream": "1.4.7",
     "del": "^1.1.1",
     "gulp": "~3.8.10",
     "gulp-bump": "^0.1.11",
@@ -62,6 +61,7 @@
   "dependencies": {
     "through": "~2.3.6",
     "sax": "~0.6.1",
-    "trumpet": "~1.7.0"
+    "trumpet": "~1.7.0",
+    "concat-stream": "1.4.7"
   }
 }
